# RAG-Question-Answering-System-Project

./: .gitignore  Dockerfile  README.md  api.py  doc.txt  main.py  pyproject.toml  requirements.txt  test.ipynb
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: api.js
