[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.6",
    "langchain-text-splitters>=1.1.2",
    "langchain-core>=1.3.0",
    "ddgs>=9.14.1",
    "pypdf>=6.10.2",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "ipykernel>=7.2.0",
]
